--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -1,7 +1,15 @@
-.LanguageDropdown >  select{
-    margin: 5px 15px 0;
-    border-radius: 5px;
-    width: 370px;
-    font-size: 0.9em;
-    padding: 2px;
+.LanguageDropdown > select {
+    width: 100%;
+    font-size: 1em;
+	margin: 2px;
+	color: #535353;
+	padding: 5px;
+	height: 50px;
+	cursor: pointer;
+}
+
+.LanguageDropdown > select:hover {
+	background-color: #dbe2e8;
+	color: #7b7b7b;
+	padding: 15px 5px 15px 25px;
 }
