--- a/src/components/LanguageDropdown/LanguageDropdown.css
+++ b/src/components/LanguageDropdown/LanguageDropdown.css
@@ -1,4 +1,4 @@
-.LanguageDropdown > select {
+.languageDropdown > select {
     width: 100%;
     font-size: 1em;
 	margin: 2px;
@@ -8,7 +8,7 @@
 	cursor: pointer;
 }
 
-.LanguageDropdown > select:hover {
+.languageDropdown > select:hover {
 	background-color: #dbe2e8;
 	color: #7b7b7b;
 	padding: 15px 5px 15px 25px;
